--- a/Exercícios/ex026/mq005/estilos/style.css
+++ b/Exercícios/ex026/mq005/estilos/style.css
@@ -19,8 +19,22 @@ header > h1{
     text-align: center;
 }
 
-menu{
+span#burguer{
+    text-align: center;
     display: block;
+    color: white;
+    background-color: rgb(53, 53, 53);
+    padding: 10px;
+    cursor: pointer;
+}
+
+span#burguer:hover{
+    background-color: white;
+    color: black;
+}
+
+menu{
+    display: none;
 }
 
 menu > ul{
