--- a/Exercícios/ex026/mq005/estilos/style.css
+++ b/Exercícios/ex026/mq005/estilos/style.css
@@ -19,7 +19,7 @@ header > h1{
     text-align: center;
 }
 
-span#burguer{
+i#burguer{
     text-align: center;
     display: block;
     color: white;
@@ -28,7 +28,7 @@ span#burguer{
     cursor: pointer;
 }
 
-span#burguer:hover{
+i#burguer:hover{
     background-color: white;
     color: black;
 }
@@ -56,7 +56,7 @@ menu > ul > li > a:hover{
 }
 
 main{
-    width: 90vh;
+    width: 80vh;
     background-color: white;
     margin: auto;
     margin-top: 10px;
