--- a/Exercícios/projeto-login/estilos/style.css
+++ b/Exercícios/projeto-login/estilos/style.css
@@ -7,5 +7,46 @@
 */
 
 *{
-    font-family:
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html{
+    background-color: #5f2c82;
+    height: 100vh;
+    width: 100vh;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    overflow: hidden;
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+}
+
+#login > #imagem{
+    display: block;
+    background: #5f2c82 url(../imagens/pexels-sean-whang-804269.jpg) no-repeat;
+    background-position: left bottom;
+    background-size: cover;
+    height: 200px;
+}
+
+#login > #formulario{
+    display: block;
+    padding: 10px;
 }
