--- a/Exercícios/projeto-login/estilos/mediaquery.css
+++ b/Exercícios/projeto-login/estilos/mediaquery.css
@@ -30,13 +30,21 @@
     }
 
     #imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     #formulario{
-        float: right;
+        float: left;
         width: 50%;
+    }
+
+    #formulario > h1{
+        font-size: 1em;
+    }
+
+    #formulario > p{
+        font-size: 1.2em;
     }
 }
