--- a/Exercícios/projeto-login/estilos/style.css
+++ b/Exercícios/projeto-login/estilos/style.css
@@ -33,7 +33,7 @@ main{
     overflow: hidden;
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
     transition: width .3s, height .3s;
@@ -59,5 +59,56 @@ main{
 }
 
 #formulario > p{
+    font-size: 0.8em;
+}
+
+input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+input[type=submit]:hover{
+    background-color: #1c514f;
+}
+
+.campo > label{
+    display: none;
+}
+
+.campo{
+    background-color: #5f2c82;
+    width: 100%;
+    height: 40px;
+    display: block;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: white;
+    color: #1c514f;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+.botao:hover{
+    background-color: #82e7e3;
+}
+
+.botao > i{
     font-size: 0.8em;
 }
